src/index.css
body {
  font: 14px "Century Gothic", Futura, sans-serif;
  background-color: #333333;
  color: ivory;
}
.navbar{
  padding-left: 53px;
  padding-top: 15px;
  padding-bottom: 15px;
  height: auto;
  width: 100%;
  display: block;
  text-align: left;
}
a.navbar-brand{
  font-weight: 800;
  color: #61dbfb!important;
  position: absolute;
  top: 8px;
}
.logo {
  color: white;
  display: inline;
  border-bottom: #61dbfb 2px solid;
}
img {
  height: 40px;
  width: 40px;
}
.navbar-toggler{
  border-radius: 25px;
  transition: border-radius .6s;
  padding: 8px 26px;
  margin-right: 25px;
  color: white!important;
  border-color: #61dbfb!important;
}
.nav-center{
  margin-left: auto;
  margin-right: auto;
  width: fit-content;
}
.board-row:after {
  clear: both;
  content: "";
  display: table;
  width: fit-content;
}
.board-row {
  width: fit-content;
  margin: 0 auto;
}
.status {
  margin-bottom: 35px;
}
.center{
  margin: 0 auto;
}
.square {
  background: #333333;
  border: 1px solid #444444;
  float: left;
  height: 25px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  width: 25px;
}
.dark {
  background-color: #222222;
}
.game-board{
  margin: 0 auto;
  text-align: center;
  width: 100%;
}
.square:focus {
  outline: none;
}
.game {
  margin: 0 auto;
}
.wide {
  margin: 0 auto;
  width: 60%;
}
hr{
  border-color: ivory;
}
img {
  filter: invert(77%) sepia(9%) saturate(2546%) hue-rotate(156deg) brightness(101%) contrast(97%);
}
.reset:hover{
  border-color: white!important;
  border-radius: 0px;
  transition: border-radius .6s;
}
.reset:focus{
  outline: none;
}
/*classes for actual visualizing*/
.green{
  border: 1px solid #61dbfb;
  background-color: #61dbfb;
}
.start{
  background-color: blue;
  border: 1px rgb(96, 69, 251) solid;
  animation-name: startAnimation;
  animation-duration: .6s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
}
.current{
  background-color: red;
}
.visited{
  background-color: yellow;
  border: 1px solid yellow;
  animation-name: return;
  animation-duration: 2.0s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
}
.X{
  background-color: red;
  border: 1px solid #444444;
  animation-name: visitedAnimation;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
}
.weight{
  background-color: transparent;
  background-image: url(kg.svg);
  background-size: cover;
}
.wall {
  background-color: #111;
  border: 1px solid #333;
 /* background-image: url(brick.svg);*/
  background-size: cover;
  animation: wallAnimation .3s linear 0s 1;
}
.active {
  color: #61dbfb!important;
  border-radius: 0px;
}
.wall:focus {
  animation: wallAnimation .2s linear 0s 1;
}
/*animations  for pathfinding*/
@keyframes visitedAnimation {
  0% {
    transform: scale(.3);
    background-color: #61dbfb;
    border-radius: 100%;
  }

  50% {
    background-color: rgba(22, 78, 230, 0.66);
  }

  75% {
    transform: scale(1.1);
    background-color: rgba(102, 22, 230, 0.75);
  }

  100% {
    transform: scale(1.0);
    background-color: rgba(188, 22, 230, 0.75);
  }
}
@keyframes startAnimation {
  0% {
    transform: scale(.3);
    background-color: rgba(26, 97, 230, 0.541);
    border-radius: 100%;
  }

  50% {
    background-color: rgba(22, 78, 230, 0.66);
  }

  75% {
    transform: scale(1.1);
    background-color: rgba(102, 22, 230, 0.75);
  }

  100% {
    transform: scale(1.0);
    background-color: rgb(96, 69, 251);
  }
}

@keyframes return {
  0% {
    border-color: #61dbfb;
    transform: scale(.8);
    background-color: #277b90;
    border-radius: 10%;
  }

  75% {
    transform: scale(1.1);
    background-color: #19d1ffac;
  }

  100% {
    transform: scale(1.0);
    background-color: #61dbfb;
    border-color: #61dbfb;
  }
}

@keyframes wallAnimation {
  0% {
    transform: scale(.8);
    background-color: black;
  }

  75% {
    transform: scale(1.1);
    background-color: #111;
  }

  100% {
    transform: scale(1.0);
    background-color: black;
  }
}
@keyframes borderChange {
  from {
    border-radius: 25px;
  }

  to {
    border-radius: 0px;
  }
}
@keyframes borderBack {
  from {
    border-radius: 0px;
  }

  to {
    border-radius: 25px;
  }
}
#root{
  width: 100%;
}

